--- a/src/shopMediaStyles.scss
+++ b/src/shopMediaStyles.scss
@@ -15,17 +15,16 @@
     }
 }
 
-.container { 
-    width: 100%!important;
-    margin: 25% 25% 0% 28%;
-    font-family: 'quicksand', sans-serif;
+// .container { 
+//     width: 100%!important;
+//     margin: 25% 25% 0% 28%;
+//     font-family: 'quicksand', sans-serif;
     
 
-}
+// }
 
 .cardStyle { 
     width: 30em;
-    margin: 1em;
 }
 
 .btn { 
